# taskgarden

./: .gitignore  LICENSE  MIGRATION_PLAN.md  PROJECT.md  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
scripts/: deploy_release.sh  rollback_release.sh
src/taskgarden/: __init__.py  cli.py  reminders.py  todos.py
tests/: __init__.py  test_legacy_parity.py  test_todos.py
tests/fixtures/: legacy_todo.py
